# color-picker

./: .gitignore  LICENSE  pyproject.toml
src/main/: Card.py  Circle.py  CloseButton.py  ColorData.py  ColorDescription.py  ColorName.py  Colors.csv  HelpButton.py  SavedButton.py  StartButton.py  __main__.py
