[project]
name = "color-picker"
version = "0.0.1"
dependencies = [
    "flet"
]
authors = [
  { name="Ekaterina Mashchenko"},
]
description = "A small color-picking application"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/wielkate/color-picker"